[package]
name = "models-cv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = {version="1.2", features = ["extras","names"]}
obj = "0.10.2"
nalgebra = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"

[dev-dependencies]
kiss3d = "*"
png = "*"
