[package]
name = "models-cv"
version = "0.1.0"
edition = "2021"
description = "Groundtruth Data Generation for SFM Pipelines using CG Models"
authors = [ "Marc Haubenstock <marc.dhaubenstock@gmail.com>" ]

repository = "https://github.com/geoeo/models-cv"
readme = "README.md"
categories = [ "computer-vision"]
keywords = [ "sfm", "computer-vision" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = {version="1.2", features = ["extras","names"]}
obj = "0.10.2"
nalgebra = "0.32.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
ordered-float = "3.7.0"

[dev-dependencies]
kiss3d = "0.35.0"
png = "0.17.10"
